# Strata

./: .gitignore  CODEBASE_REVIEW_REPORT.md  FV_EXECUTION_PLAN.md  PLAN_DISCUSSION.md  config.example.toml  pan.md  pyproject.toml
.cursor/rules/: create-fv-plan.mdc  full-review.mdc  fv-execute.mdc  fv-reviewer.mdc  fv-writer.mdc  workspace.mdc
frontend/: index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts  vitest.config.ts
frontend/src/: App.vue  style.css
scripts/: agent_e2e.py  export_transitions.py  osworld_smoke.py  run_tasks.py
strata/: __init__.py  __main__.py  health.py
strata/core/: __init__.py  _validators.py  config.py  errors.py  paths.py  sandbox.py  types.py
strata/debug/: __init__.py  controller.py  panel.html  rollback.py  server.py
strata/env/: __init__.py  factory.py  filesystem.py  gui_osworld.py  osworld_client.py  protocols.py  pty_terminal.py
strata/grounding/: __init__.py  filter.py  scaler.py  terminal_handler.py  validator.py  vision_locator.py
strata/harness/: __init__.py  actions.py  context.py  debug.py  executor.py  graph_tracker.py  gui_lock.py  orchestrator.py  persistence.py  recovery.py  scheduler.py  state_machine.py
strata/interaction/: __init__.py  cli.py
strata/llm/: __init__.py  provider.py  router.py
strata/observability/: __init__.py  recorder.py  transcript.py
strata/planner/: __init__.py  adjuster.py  htn.py  prompts.py  tasks.py
tasks/: README.md  TEMPLATE.toml  chrome-search-reimu.toml  create-hello-txt.toml  gui-type-in-terminal.toml  list-tmp-count.toml  read-hostname.toml  vim-cpp-aplusb.toml  vim-cpp-hello.toml
tests/: __init__.py  conftest.py  strategies.py  test_debug_controller.py  test_debug_rollback.py  test_debug_server.py  test_health.py  test_integration.py  test_properties.py  test_public_api.py  test_strategies.py  test_tasks.py
tests/e2e/: conftest.py  test_e2e_tasks.py  test_live_llm.py  test_osworld_pipeline.py
tests/test_core/: test_config.py  test_errors.py  test_sandbox.py  test_types.py
tests/test_env/: test_factory.py  test_filesystem.py  test_gui_osworld.py  test_protocols.py  test_pty_terminal.py  test_terminal_pty.py
tests/test_grounding/: __init__.py  test_filter.py  test_scaler.py  test_terminal_handler.py  test_validator.py  test_vision_locator.py
tests/test_harness/: test_actions.py  (+10 more)
(+43 files in other folders)
